# OpenmpExamples

./: CMakeLists.txt  LR  README.md  main.c  merge_sort.c  mympiapp.ctest
